// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should be able to switch tab 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <a
      class="mr-auto navbar-brand"
      href="#"
    >
      <div
        class="logo"
      />
    </a>
    <div
      class="mr-auto navbar-nav"
    >
      <a
        class="nav-link"
        data-rb-event-key="/"
        href="/"
      >
        Staking
      </a>
      <a
        class="nav-link"
        data-rb-event-key="/worklock"
        href="/worklock"
      >
        Worklock
      </a>
    </div>
    <div
      class="float-right h4 m-5"
    >
      <a
        href="https://github.com/cryptoseal86/stake-nucypher"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 496 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
          />
        </svg>
      </a>
    </div>
  </nav>
  <div
    class="App"
  >
    <div
      class="staker-container"
    >
      <div
        class="container"
      >
        <nav
          class="tab-controls d-flex mx-auto nav nav-tabs"
          role="tablist"
        >
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="stake"
            href="#"
            role="tab"
            tabindex="-1"
          >
            Stake
          </a>
          <a
            aria-selected="true"
            class="nav-item nav-link active"
            data-rb-event-key="withdraw"
            href="#"
            role="tab"
          >
            Withdraw
          </a>
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="history"
            href="#"
            role="tab"
            tabindex="-1"
          >
            History
          </a>
        </nav>
        <div
          class="tab-content"
        >
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
            <div
              class="panel row"
            >
              <div
                class="col"
              >
                <h2
                  class="text-center"
                >
                  Welcome back, 0x62DB
                </h2>
                <div
                  class="mt-5 row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Current period
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      18945
                    </p>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Next period in
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      0 minutes
                    </p>
                  </div>
                </div>
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Tokens staked
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      179272.6235 
                      <br />
                      NU
                    </p>
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-primary"
                        type="button"
                      >
                        Add stake
                      </button>
                    </div>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Total rewards
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      0.0000 
                      <br />
                      NU
                    </p>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Available for withdrawal
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      179272.6235 
                      <br />
                      NU
                    </p>
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-secondary"
                        data-testid="withdraw-switch-button"
                        type="button"
                      >
                        Withdraw
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-5 row"
                >
                  <div
                    class="col-md-6"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Restaking
                    </p>
                    <div
                      class="h4 text-center"
                    >
                      <div
                        class="react-toggle"
                      >
                        <div
                          class="react-toggle-track"
                        >
                          <div
                            class="react-toggle-track-check"
                          >
                            <svg
                              height="11"
                              viewBox="0 0 14 11"
                              width="14"
                            >
                              <title>
                                switch-check
                              </title>
                              <path
                                d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
                                fill="#fff"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                          <div
                            class="react-toggle-track-x"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 10 10"
                              width="10"
                            >
                              <title>
                                switch-x
                              </title>
                              <path
                                d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
                                fill="#fff"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          class="react-toggle-thumb"
                        />
                        <input
                          class="react-toggle-screenreader-only"
                          data-testid="restaking-toggle"
                          type="checkbox"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="col-md-6"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Wind down
                    </p>
                    <div
                      class="h4 text-center"
                    >
                      <div
                        class="react-toggle react-toggle--checked"
                      >
                        <div
                          class="react-toggle-track"
                        >
                          <div
                            class="react-toggle-track-check"
                          >
                            <svg
                              height="11"
                              viewBox="0 0 14 11"
                              width="14"
                            >
                              <title>
                                switch-check
                              </title>
                              <path
                                d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
                                fill="#fff"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                          <div
                            class="react-toggle-track-x"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 10 10"
                              width="10"
                            >
                              <title>
                                switch-x
                              </title>
                              <path
                                d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
                                fill="#fff"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                        </div>
                        <div
                          class="react-toggle-thumb"
                        />
                        <input
                          checked=""
                          class="react-toggle-screenreader-only"
                          data-testid="winddown-toggle"
                          type="checkbox"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-5 row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Your worker
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      0x62DB
                    </p>
                    <div
                      class="action d-flex justify-content-center text-center"
                    >
                      <button
                        class="btn btn-secondary"
                        type="button"
                      >
                        Change worker
                      </button>
                      <button
                        class="ml-1 btn btn-secondary"
                        type="button"
                      >
                        Detach worker
                      </button>
                    </div>
                    <div
                      class="small text-muted text-center pt-1"
                    >
                      Warning! Worker change/detach is possible once in 2 periods
                    </div>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Worker activity
                    </p>
                    <p
                      class="h5 text-center"
                    >
                      <span
                        class="text-secondary"
                      >
                        <span>
                          Never confirmed activity
                        </span>
                      </span>
                    </p>
                    <div
                      class="action"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="row"
                >
                  <div
                    class="col"
                  >
                    <h5
                      class="pt-3 pb-3 text-center"
                    >
                      Your stakes:
                    </h5>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col"
                  >
                    <div
                      class="container"
                    >
                      <div
                        class="table"
                      >
                        <div
                          class="table-row table-header"
                        >
                          <div
                            class="table-row-column table-row-index"
                          >
                            #
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            Value
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            Remaining
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            Enactment
                          </div>
                          <div
                            class="table-row-column table-center"
                          />
                        </div>
                        <div
                          class="table-row"
                        >
                          <div
                            class="table-row-column table-row-index"
                          >
                            0
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            64369.1548 NU
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            366 periods
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            Jan 24, 20 - Feb 24, 21
                          </div>
                          <div
                            class="table-row-column table-center"
                          >
                            <button
                              class="m-1 btn btn-secondary btn-sm"
                              data-testid="divide-button-0"
                              type="button"
                            >
                              Divide
                            </button>
                            <button
                              class="m-1 btn btn-secondary btn-sm"
                              data-testid="prolong-button-0"
                              type="button"
                            >
                              Prolong
                            </button>
                          </div>
                        </div>
                        <div
                          class="mt-4 collapse container"
                        >
                          <div
                            class="row"
                          >
                            <div
                              class="col"
                            >
                              <form
                                class=""
                              >
                                <div
                                  class="mt-2 form-group row"
                                >
                                  <div
                                    class="col-sm-3"
                                  >
                                    <input
                                      class="form-control form-control-sm"
                                      data-testid="first-substake-value"
                                      name="firstSubstakeValue"
                                      type="text"
                                      value="32184.57741283639504424"
                                    />
                                    <div
                                      class="feedback-placeholder"
                                    >
                                      <div
                                        class="invalid-feedback"
                                        style="display: none;"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="d-flex justify-content-center col-sm-6"
                                    style="padding-top: 8px;"
                                  >
                                    <div
                                      class="rc-slider"
                                    >
                                      <div
                                        class="rc-slider-rail"
                                      />
                                      <div
                                        class="rc-slider-track"
                                        style="left: 0%; width: 50%;"
                                      />
                                      <div
                                        class="rc-slider-step"
                                      />
                                      <div
                                        aria-disabled="false"
                                        aria-valuemax="100"
                                        aria-valuemin="0"
                                        aria-valuenow="50"
                                        class="rc-slider-handle"
                                        role="slider"
                                        style="left: 50%; transform: translateX(-50%);"
                                        tabindex="0"
                                      />
                                      <div
                                        class="rc-slider-mark"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="col-sm-3"
                                  >
                                    <input
                                      class="form-control form-control-sm"
                                      data-testid="second-substake-value"
                                      name="secondSubstakeValue"
                                      type="text"
                                      value="32184.577412836395044239"
                                    />
                                    <div
                                      class="feedback-placeholder"
                                    >
                                      <div
                                        class="invalid-feedback"
                                        style="display: none;"
                                      />
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="form-group row"
                                >
                                  <label
                                    class="form-label col-form-label col-md-2 offset-md-2"
                                  >
                                    Extend for
                                  </label>
                                  <div
                                    class="col-md-4"
                                  >
                                    <input
                                      class="form-control"
                                      name="stakeDuration"
                                      type="number"
                                      value="1"
                                    />
                                    <div
                                      class="feedback-placeholder"
                                    >
                                      <div
                                        class="invalid-feedback"
                                        style="display: none;"
                                      />
                                    </div>
                                  </div>
                                  <label
                                    class="form-label col-form-label col-md-2"
                                  >
                                    periods
                                  </label>
                                </div>
                                <div
                                  class="d-flex justify-content-center"
                                >
                                  <button
                                    class="btn btn-primary"
                                    type="submit"
                                  >
                                    Divide
                                  </button>
                                </div>
                              </form>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mt-4 collapse container"
                        >
                          <div
                            class="row"
                          >
                            <div
                              class="col"
                            >
                              <form
                                class=""
                              >
                                <div
                                  class="form-group row"
                                >
                                  <label
                                    class="form-label col-form-label col-md-2 offset-md-2"
                                    for="substake-prolong-duration"
                                  >
                                    Extend for
                                  </label>
                                  <div
                                    class="col-md-4"
                                  >
                                    <input
                                      class="form-control"
                                      id="substake-prolong-duration"
                                      name="prolongDurationValue"
                                      type="number"
                                      value="1"
                                    />
                                    <div
                                      class="feedback-placeholder"
                                    >
                                      <div
                                        class="invalid-feedback"
                                        style="display: none;"
                                      />
                                    </div>
                                  </div>
                                  <label
                                    class="form-label col-form-label col-md-4"
                                  >
                                    periods
                                  </label>
                                </div>
                                <div
                                  class="d-flex justify-content-center"
                                >
                                  <button
                                    class="btn btn-primary"
                                    type="submit"
                                  >
                                    Prolong
                                  </button>
                                </div>
                              </form>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="fade tab-pane active show"
            role="tabpanel"
          >
            <div
              class="panel row"
            >
              <div
                class="col"
              >
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Unlocked from WorkLock
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      20000.0000 
                      <br />
                       ETH
                    </p>
                    <div
                      class="text-center d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-secondary"
                        type="button"
                      >
                        Refund
                      </button>
                    </div>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Policy rewards
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      7000 
                      <br />
                       wei 
                    </p>
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-secondary"
                        type="button"
                      >
                        Withdraw
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Rewards
                    </p>
                    <div
                      class="text-center d-flex justify-content-center"
                    >
                      <form
                        class="w-100"
                      >
                        <div
                          class="form-group row"
                        >
                          <label
                            class="form-label col-form-label col-md-2 offset-md-2"
                            for="withdraw-value"
                          >
                            Amount
                          </label>
                          <div
                            class="col-md-4"
                          >
                            <input
                              class="form-control form-control-bg"
                              id="withdraw-value"
                              name="withdrawValue"
                              type="text"
                              value="0"
                            />
                            <div
                              class="invalid-feedback"
                              style="display: none;"
                            />
                          </div>
                          <div
                            class="col-md-2"
                          >
                            <button
                              class="btn btn-link btn-sm"
                              type="button"
                            >
                              Set max
                            </button>
                          </div>
                        </div>
                        <div
                          class="d-flex justify-content-center"
                        >
                          <button
                            class="btn btn-primary"
                            type="submit"
                          >
                            Withdraw
                          </button>
                        </div>
                      </form>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
            <div
              class="panel"
            >
              <div
                class="w-100 row"
              >
                <div
                  class="col-md-12"
                >
                  <div
                    class="p-3 table"
                  >
                    <div
                      class="table-row table-header"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        Block #
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Action
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Worker confirmed activity
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Deposited 20.0000 NU
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Withdrawal of 20.0000 NU
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Disabled restaking
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Slashed stake for undefined
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Disabled winddown
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Divided stake
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Set worker to 0xb1d0
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Minted reward of 20.0000 NU
                      </div>
                    </div>
                    <div
                      class="table-row"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        12
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Withdrawal of policy reward 0 ETH
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<App /> should render correctly 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <a
      class="mr-auto navbar-brand"
      href="#"
    >
      <div
        class="logo"
      />
    </a>
    <div
      class="mr-auto navbar-nav"
    >
      <a
        class="nav-link"
        data-rb-event-key="/"
        href="/"
      >
        Staking
      </a>
      <a
        class="nav-link"
        data-rb-event-key="/worklock"
        href="/worklock"
      >
        Worklock
      </a>
    </div>
    <div
      class="float-right h4 m-5"
    >
      <a
        href="https://github.com/cryptoseal86/stake-nucypher"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 496 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
          />
        </svg>
      </a>
    </div>
  </nav>
  <div
    class="App"
  >
    <div
      class="staker-container"
    >
      <div
        class="container"
      >
        <nav
          class="tab-controls d-flex mx-auto nav nav-tabs"
          role="tablist"
        >
          <a
            aria-selected="true"
            class="nav-item nav-link active"
            data-rb-event-key="stake"
            href="#"
            role="tab"
          >
            Stake
          </a>
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="withdraw"
            href="#"
            role="tab"
            tabindex="-1"
          >
            Withdraw
          </a>
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="history"
            href="#"
            role="tab"
            tabindex="-1"
          >
            History
          </a>
        </nav>
        <div
          class="tab-content"
        >
          <div
            aria-hidden="false"
            class="fade tab-pane active show"
            role="tabpanel"
          >
            <div
              class="panel row"
            >
              <div
                class="col"
              >
                <h2
                  class="text-center"
                >
                  Welcome back, 
                </h2>
                <div
                  class="mt-5 row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Current period
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      18945
                    </p>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Next period in
                    </p>
                    <p
                      class="h4 text-center"
                    >
                      0 minutes
                    </p>
                  </div>
                </div>
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Tokens staked
                    </p>
                    <p
                      class="h4 text-center"
                    >
                       
                      <br />
                      NU
                    </p>
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-primary"
                        type="button"
                      >
                        Add stake
                      </button>
                    </div>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Total rewards
                    </p>
                    <p
                      class="h4 text-center"
                    >
                       
                      <br />
                      NU
                    </p>
                  </div>
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Available for withdrawal
                    </p>
                    <p
                      class="h4 text-center"
                    >
                       
                      <br />
                      NU
                    </p>
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-secondary"
                        data-testid="withdraw-switch-button"
                        type="button"
                      >
                        Withdraw
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-5 row"
                />
                <div
                  class="mt-5 row"
                />
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              />
            </div>
          </div>
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
            <div
              class="panel row"
            >
              <div
                class="col"
              >
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Policy rewards
                    </p>
                    <p
                      class="h4 text-center"
                    />
                    <div
                      class="action d-flex justify-content-center"
                    >
                      <button
                        class="button-action mt-2 btn btn-secondary"
                        type="button"
                      >
                        Withdraw
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-5 tokens-row row"
                >
                  <div
                    class="col"
                  >
                    <p
                      class="h6 text-center"
                    >
                      Rewards
                    </p>
                    <div
                      class="text-center d-flex justify-content-center"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
            <div
              class="panel"
            >
              <div
                class="w-100 row"
              >
                <div
                  class="col-md-12"
                >
                  <div
                    class="p-3 table"
                  >
                    <div
                      class="table-row table-header"
                    >
                      <div
                        class="table-row-column table-row-index"
                      >
                        Block #
                      </div>
                      <div
                        class="table-row-column table-center w-100"
                      >
                        Action
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
